...
                FavoritesView(store: self.store.scope(
                    state: \.favorites, action: AppAction.favorites)
                )
                    .tabItem {
                        VStack {
                            Image(systemName: "star.fill")
                            Text("Favorites")
                        }
                }
                SettingsView(store:
                    self.store.scope(state: \.settings, action: AppAction.settings)
                )
                    .tabItem {
                        VStack {
                            Image(systemName: "gear")
                            Text("Settings")
                        }
                }
            }
            .environment(\.font, viewStore.fontSelection.font)
            .environment(\.sizeCategory, viewStore.contentSizeSelection.contentSize)
        }
...
