...
    var body: some View {
        WithViewStore(self.store) { viewStore in
            NavigationView {
                EmptyView()
                .navigationBarTitle("\(viewStore.number) \(viewStore.title)")
                .navigationBarItems(trailing: Button(action: { viewStore.send(.heartTapped) }) {
                    Image(systemName: viewStore.isFavorite ? "heart.fill" : "heart")
                })
            }
        }
    }
}

...
